[gd_scene format=3 uid="uid://c1031ps30bjdd"]

[ext_resource type="Script" uid="uid://kg15eommmj01" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://doxhqlep25o1" path="res://icon.svg" id="2_i3pqv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 28.62

[sub_resource type="SpriteFrames" id="SpriteFrames_sweqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i3pqv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]

[node name="Player" type="CharacterBody2D" unique_id=551747429]
collision_mask = 26
motion_mode = 1
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1768745601]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=920943414]
sprite_frames = SubResource("SpriteFrames_sweqy")

[node name="ShootPositionMarker" type="Marker2D" parent="." unique_id=1544787211]
position = Vector2(0, -10)

[node name="Hitbox" type="Area2D" parent="." unique_id=556600381]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" unique_id=1468270804]
shape = SubResource("CircleShape2D_i3pqv")

[node name="ShotTimer" type="Timer" parent="." unique_id=513685324]

[node name="InvulnTimer" type="Timer" parent="." unique_id=181673731]
one_shot = true
